--- a/src/index.css
+++ b/src/index.css
@@ -35,16 +35,67 @@ h1{
 }
 
 .row >div.green{
-  background: #5ac85a;
-  border-color: #5ac85a;
+  --background: #5ac85a;
+  --border-color: #5ac85a;
+  animation: flip 0.6s ease forwards;
 }
 
 .row >div.grey{
-  background: #a1a1a1;
-  border-color: a1a1a1;
+  --background: #a1a1a1;
+  --border-color: #a1a1a1;
+  animation: flip 0.6s ease forwards;
+
 }
 
 .row >div.yellow{
-  background: #e2cc68;
-  border-color: e2cc68;
+  --background: #e2cc68;
+  --border-color: #e2cc68;
+  animation: flip 0.6s ease forwards;
+}
+
+.row >div:nth-child(2){
+  animation-delay: 0.2s;
+}
+
+.row >div:nth-child(3){
+  animation-delay: 0.4s;
+}
+
+.row >div:nth-child(4){
+  animation-delay: 0.6s;
+}
+
+.row >div:nth-child(5){
+  animation-delay: 0.8s;
+}
+
+
+/* Animations */
+
+@keyframes flip{
+  0% {
+    transform: rotateX(0);
+    background: white;
+    border-color: #333;
+  }
+
+  45% {
+    transform: rotateX(90deg);
+    background: white;
+  }
+
+  55%{
+    transform: rotateX(90deg);
+    background: var(--background);
+    border-color: var(--border-color);
+    color: #fff;
+
+  }
+
+  100% {
+    transform: rotateX(0);
+    background: var(--background);
+    border-color: var(--border-color);
+    color: #fff;
+  }
 }
